--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^10.12.18",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
+    "pocketbase": "^0.15.2",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
